xf_system/static/gla/more/uc-extra.css
table.table-scrollable {
    display: table;
    width: 100%;
}
table.table-scrollable thead, table.table-scrollable tbody {
    float: left;
    width: 100%;
}
table.table-scrollable tbody {
    overflow: auto;
}
table.table200 tbody {
    height: 200px;
}
table.table320 tbody {
    height: 320px;
}
table.table-scrollable tr {
    width: 100%;
    display: table;
    text-align: left;
}
table.table-scrollable th, table.table-scrollable td {

}
tr.clickable-row { cursor: pointer; }
td.clickable-cell { cursor: pointer; }

.top_nav .navbar-right {
    width:auto
}

.navbar-right a.btn {
    margin-right: 15px;
}
.navbar-right a.dropdown-toggle {
    margin-right: 0px;
}
a.dropdown-toggle span.caret {
    color: #ffffff;
}

table a.btn-link {
    color: #337ab7
}

.divfullheight {
    height: 100%;
}

.panel_toolbox {
    min-width: 0;
}

.space-me {
    margin-right: 20px;
}

/* Used in the navigation bar to make an item selected, i.e. a perspective */
.nav.navbar-nav>li.selected>a {
    background-color: #D9DEE4;
    color: rgb(26, 187, 156) !important;
}

.top_nav .dropdown-menu li.selected {
    /*background-color: #D9DEE4;*/
}
.top_nav .dropdown-menu li.selected a {
    color: rgb(26, 187, 156) !important;

}

.top_nav .navbar-title {
    margin: 0;
    float: left;
    padding-top: 10px;
}

.filter-bar {
    background-color: #F2F5F7;
    border-bottom: 1px solid #D9DEE4;
    overflow: hidden;
    padding-top: 5px;
    padding-bottom: 5px;
    overflow: inherit !important;
}
.filter-widget {
    float: left;
    min-height: 40px;
    padding-right: 20px;
    padding-left: 5px;
}
.filter-buttons {
    float: right;
    min-height: 40px;
}

.nav-md.stripped .container.body .filter-bar {
    margin-left: 0px;
    padding: 5px 10px;
}

.nav-md.stripped .container.body .right_col {
    margin-left: 0px;
}

.nav-md.stripped .container.body .filter-bar {
    padding: 5px 0px;
}


@media (max-width: 991px) {
    .filter-bar2 {
        width: 100%;
        margin: 0;
    }
}

.nav_menu {
    margin-bottom: 0; !important;
}

.menu_section h3 {
    padding-left: 15px;
}

.x_content h2.small {
    color: #777;
    margin-top: -5px;
}

.x_content h3 {
    font-size: 14px;
}

.tile_count {
    margin-top: 5px; !important;
    margin-bottom: 5px; !important;
}
.x_title_no_line{
  padding: 1px 5px 6px;
  margin-bottom: 10px;
  z-index: 999;
}
.x_title_no_line .filter {
  width: 40%;
  float: right; }

.x_title_no_line h2 {
  width: 90%;
  margin: 5px 0 6px;
  float: left;
  text-align: center;
  display: block;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap; }

.x_title_no_line h2 small {
  margin-left: 10px; }

.x_title_no_line span {
  color: #BDBDBD; }
/*
.select2-container .select2-choice, .select2-result-label {
  font-size: 1.5em;
  height: 23px;
  overflow: auto;
}

.select2-arrow, .select2-chosen {
  padding-top: 6px;
}

.select2-selection.select2-selection--multiple{
    min-height: 25px;
    max-height: 25px;
    }

.select2-selection__rendered {
  line-height: 12px !important;
}

.select2-selection {
  height: 12px !important;
}

.select2-container .select2-selection--single {
    height: 12px;
}*/

div#language_chooser {

}



div#language_chooser form {
    display: inline-block!important;

}

div#language_chooser button2 {
    margin: 0;
    display:inline-block;
    border: none;
    background: none;
    text-decoration: none; /* if you like */
    padding: 7px 10px 3px;
    text-align: center;
    font-size: 17px;
    float: left;
    background: #172D44
}





.page article {
    line-height: 1.75;
    color: #515356;
    font-size: 110%;
    text-align: left;
}


.page article h2 {
    color: #1c7963;
    margin-top: 30px;
}

.page h4 {
    border-bottom: 1px solid #D9DEE4;
    padding-bottom: 5px;
    color: #1c7963;
    margin-top: 20px;

}



/* flexible widgets */

.flex_row {
  /*display: flex; */
  /* equal height of the children */
  /*flex-wrap: wrap*/



}


@media only screen and (min-width : 481px) {
    .flex-row {
        display: flex;
        flex-wrap: wrap;
    }
    .flex-row > [class*='col-'] {
        display: flex;
        flex-direction: column;
    }
    .flex-row.row:after,
    .flex-row.row:before {
        display: flex;
    }
}

/*
.flex_row div.width_50 {
    background-color: red;
    padding: 5px;
    flex: 1 1 40%;
    display: flex;
}

@media (max-width: 768px) {
  .flex_row div.width_50 {
    flex: 1 1 100%;
    border: solid 1px yellow
  }
}

@media (max-width: 480px) {
  .flex_row div.width_50 {
    flex: 1 1 100%;
    border: solid 1px green
  }
}
*/



.modal-body {
    max-height: calc(100vh - 250px); overflow-y: auto;
}


.form-static {

}

.form-static .form-control {
    border: 0px;
    padding: 3px 6px;
    box-shadow: none;
    height: 20px;
}

.form-static .form-group {
    margin-bottom: 0px;
}

.form-static .control-label {
    padding-top:4px;
}

@font-face {
  font-family: "San Francisco";
  font-weight: 400;
  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
}

body {
    font-family: -apple-system, BlinkMacSystemFont, sans-serif, "Helvetica Neue",Helvetica,Arial,sans-serif !important;
}

.action-column {
    margin-right: 0;
}

